Dist: Include a style parameter in package.json to allow manage managers to easily use the style files.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "files": [
         "css/colReorder.foundation.css"
     ],
+    "style": "css/colReorder.foundation.css",
     "keywords": [
         "reorder",
         "DataTables",
