--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "datatables.net-colreorder-zf",
-    "version": "1.3.3",
+    "version": "1.4.0",
     "description": "ColReorder for DataTables with styling for [Zurb Foundation](http://foundation.zurb.com/)",
     "files": [
         "css/colReorder.foundation.css"
@@ -22,8 +22,8 @@
     },
     "dependencies": {
         "jquery": ">=1.7",
-        "datatables.net-zf": ">=1.10.9",
-        "datatables.net-colreorder": ">=1.2.0"
+        "datatables.net-zf": "^1.10.15",
+        "datatables.net-colreorder": "1.4.0"
     },
     "repository": {
         "type": "git",
