--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.4.0",
     "description": "ColReorder for DataTables with styling for [Zurb Foundation](http://foundation.zurb.com/)",
     "files": [
-        "css/colReorder.foundation.css"
+        "css/**/*.css"
     ],
     "style": "css/colReorder.foundation.css",
     "keywords": [
