--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata>
-    <id>datatables.net-colreorder-zf</id>
-    <version>1.5.2</version>
-    <description>ColReorder for DataTables</description>
-    <authors>SpryMedia Ltd</authors>
-    <projectUrl>http://datatables.net</projectUrl>
-    <license type="expression">MIT</license>
-    <tags>colreorder DataTables jQuery table Foundation</tags>
-    <repository type="git" url="https://github.com/DataTables/Dist-DataTables-ColReorder-Foundation.git"/>
-    <dependencies>
-      <dependency id="jquery" version="1.7.0"/>
-      <dependency id="datatables.net" version="1.10.15"/>
-      <dependency id="datatables.net-colreorder" version="1.5.2"/>
-      <dependency id="foundation" version="5.0.0"/>
-    </dependencies>
-    <contentFiles>
-      <files include="**/*" buildAction="Content"/>
-    </contentFiles>
-  </metadata>
-  <files>
-    <file src="js/colreorder.foundation.js" target="content\Scripts"/>
-    <file src="js/colreorder.foundation.min.js" target="content\Scripts"/>
-    <file src="css/colreorder.foundation.css" target="content\Content"/>
-    <file src="css/colreorder.foundation.min.css" target="content\Content"/>
-    <file src="js/colreorder.foundation.js" target="contentFiles\any\any\wwwroot\js"/>
-    <file src="js/colreorder.foundation.min.js" target="contentFiles\any\any\wwwroot\js"/>
-    <file src="css/colreorder.foundation.css" target="contentFiles\any\any\wwwroot\css"/>
-    <file src="css/colreorder.foundation.min.css" target="contentFiles\any\any\wwwroot\css"/>
-  </files>
+    <metadata>
+        <version>1.5.3</version>
+        <id>datatables.net-colreorder-zf</id>
+        <description>This is ColReorder for DataTables with styling for [Foundation](https://get.foundation/)</description>
+        <repository type="git" url="https://github.com/DataTables/Dist-DataTables-ColReorder-Foundation.git"/>
+        <authors>SpryMedia Ltd</authors>
+        <projectUrl>http://datatables.net</projectUrl>
+        <license type="expression">MIT</license>
+        <tags>ColReorder  Reorder  Foundation  Datatables jQuery table</tags>
+        <dependencies>
+            <dependency id="datatables.net-colreorder" version=">=1.5.3"/>
+            <dependency id="datatables.net-zf" version=">=1.10.24"/>
+        </dependencies>
+        <contentFiles>
+            <files include="**/*" buildAction="Content"/>
+        </contentFiles>
+    </metadata>
+    <files>
+        <file src="js/colReorder.foundation.js" target="content\Scripts"/>
+        <file src="js/colReorder.foundation.js" target="contentFiles\any\any\wwwroot\js"/>
+        <file src="js/colReorder.foundation.min.js" target="content\Scripts"/>
+        <file src="js/colReorder.foundation.min.js" target="contentFiles\any\any\wwwroot\js"/>
+        <file src="css/colReorder.foundation.css" target="content\Content"/>
+        <file src="css/colReorder.foundation.css" target="contentFiles\any\any\wwwroot\css"/>
+        <file src="css/colReorder.foundation.min.css" target="content\Content"/>
+        <file src="css/colReorder.foundation.min.css" target="contentFiles\any\any\wwwroot\css"/>
+        <file src="types/colReorder.foundation.d.ts" target="content\Scripts"/>
+        <file src="types/colReorder.foundation.d.ts" target="contentFiles\any\any\wwwroot\js"/>
+    </files>
 </package>
+
