--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "main": "js/colReorder.foundation.js",
     "style": "css/colReorder.foundation.css",
     "types": "./types/colReorder.foundation.d.ts",
-    "version": "1.5.3",
+    "version": "1.5.4",
     "files": [
         "css/**/*.css",
         "js/**/*.js"
     ],
     "keywords": [
         "ColReorder",
- "Reorder",
+        "Reorder",
         "Foundation",
         "Datatables",
         "jQuery",
@@ -20,9 +20,9 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-colreorder": ">=1.5.3",
-        "datatables.net-zf": ">=1.10.24",
-        "jquery": ">=1.7"
+        "jquery": ">=1.7",
+        "datatables.net-zf": "^1.10.15",
+        "datatables.net-colreorder": "1.5.4"
     },
     "moduleType": [
         "globals",
