--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/colReorder.foundation.js",
     "module": "js/colReorder.foundation.mjs",
     "style": "css/colReorder.foundation.css",
-    "types": "./types/types.d.ts",
+    "types": "./types/colReorder.foundation.d.ts",
     "version": "1.6.2",
     "files": [
         "css/**/*.css",
@@ -14,7 +14,7 @@
     ],
     "keywords": [
         "ColReorder",
-        "Reorder",
+ "Reorder",
         "Foundation",
         "Datatables",
         "jQuery",
@@ -23,8 +23,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-colreorder": ">=1.5.6",
-        "datatables.net-zf": ">=1.12.1",
+        "datatables.net-colreorder": ">=1.6.2",
+        "datatables.net-zf": ">=1.13.4",
         "jquery": ">=1.7"
     },
     "moduleType": [
