--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "js/colReorder.foundation.mjs",
     "style": "css/colReorder.foundation.css",
     "types": "./types/colReorder.foundation.d.ts",
-    "version": "1.7.0",
+    "version": "2.0.0",
     "files": [
         "css/**/*.css",
         "js/**/*.js",
@@ -23,8 +23,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-colreorder": ">=1.6.2",
-        "datatables.net-zf": ">=1.13.4",
+        "datatables.net-colreorder": "2.0.0",
+        "datatables.net-zf": ">=2.0.0",
         "jquery": ">=1.7"
     },
     "moduleType": [
